# CultivationWorld

./: .gitignore  AGENTS.md  start-editor-dev.cmd  start-editor-web.cmd  start-game-web.cmd
.cursor/rules/: project-rules.md
apps/editor/: data-editor.html  package-lock.json  package.json  serve.py
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/src-tauri/src/: backup.rs  commands.rs  json_store.rs  lib.rs  main.rs  project.rs  validation.rs
apps/game/: index.html  package.json  serve.py  simulation.html
docs/: README.md  TODO-combat-survival.md  TODO-quest-reward.md  TODO-reincarnation-saveload.md  overview.md
docs/architecture/: design-patterns.md  file-structure.md  reference-acs-rimworld.md  system-overview.md
docs/balance/: simulation-iteration-process.md  tuning-2026-06-01-result-v2.md  tuning-2026-06-01-result.md  tuning-2026-06-01-v2.md  tuning-2026-06-01-v3-result.md  tuning-2026-06-01-v4-result.md  tuning-2026-06-01-v5-result.md  tuning-2026-06-01-v6-result.md  tuning-2026-06-01.md  tuning-2026-06-02-archetype-behavior.md
docs/data/: data-config-rules.md
docs/data-models/: behavior-configs.md  combat-attributes.md  economic-transaction.md  faction.md  info-propagation.md  monster.md  npc.md  player.md  ranks.md  relationship.md  sect-operation.md  world-map.md  world-modifiers.md
docs/decisions/: adr-001-pure-frontend.md  adr-002-tauri-rust-editor.md  adr-003-apps-directory-split.md  adr-004-auto-simulation-npc-pool.md  adr-005-need-driven-goap-architecture.md  adr-006-spatial-movement-and-timed-actions.md  (+52 more)
(+927 files in other folders)
