[package]
name = "xuantian-editor"
version = "0.1.0"
description = "玄天大陆数据编辑器"
authors = ["WorldDynamic"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xuantian_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
